cynic/tests/snapshots/recursive_queries__optional_recursive_types__friends_decoding_with_extra_depth.snap
---
source: cynic/tests/recursive-queries.rs
expression: query.decode_response(data).unwrap().data
---
all_authors:
  - friends:
      - friends:
          - friends: ~
            referrer: ~
        referrer: ~
    referrer: ~
