cynic/tests/snapshots/recursive_queries__optional_recursive_types__friends_decoding_with_matching_depth.snap
---
source: cynic/tests/recursive-queries.rs
assertion_line: 120
expression: "serde_json::from_value::<FriendsQuery>(data).unwrap()"

---
all_authors:
  - friends:
      - friends:
          - friends: ~
            referrer: ~
        referrer:
          friends: ~
          referrer: ~
    referrer:
      friends:
        - friends: ~
          referrer: ~
      referrer:
        friends: ~
        referrer: ~

